# twodina

./: .gitignore  .rustfmt.toml  Cargo.toml  LICENSE  README.md  build_release
assets/: app.toml
assets/dialogue/: level1.dialogue  proposal.dialogue
assets/maps/: attribution.txt  ritualspace.tmx  sandyrocks.tmx  terraforming.tmx  trees.xcf
assets/maps/liam/: maze.tmx
assets/maps/melle/: ritualspace.tmx  sandyrocks.tmx  stones_remix_64.xcf
assets/scripts/: demo.rb  prelude.rb  startup.rb
assets/sfx/: license.txt
assets/sprites/: attribution.txt  naked_base.ase
assets/tile_maps/: path_map.tmx
src/: actions.rs  camera.rs  character.rs  collider.rs  core.rs  debug.rs  dialogue.rs  game.rs  input.rs  items.rs  loading.rs  main.rs  menu.rs  motion.rs  movement.rs  players.rs  scene2d.rs  ui.rs
src/core/: character.rs  collider.rs  config.rs  dialogue.rs  game.rs  geometry.rs  input.rs  menu.rs  script.rs  script_core.rs  state.rs
src/core/script_core/: mruby.rs
