[package]
name = "twodina"
description = "A 2d game engine on top of Bevy."
version = "0.2.1"
authors = ["Jonathan Tran <jonnytran@gmail.com>", "Daniel Taub <dmtaub@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "^1.0.36"
artichoke = { git = "https://github.com/artichoke/artichoke", branch = "trunk" }
bevy = { version = "0.5.0", features=["vorbis"] }
bevy_tiled_prototype = "0.2.2"
ncollide2d = "0.27.0"
ron = "0.6.4"
serde = { version = "^1.0.123", features = ["derive"] }
toml = "0.5"

# [patch.bevy]
# bevy = { git = "https://github.com/bevyengine/bevy/", branch = "main", features = ["vorbis"] }
# [patch.'bevy_tiled_prototype']
# bevy_tiled_prototype = { path = "../bevy_tiled" }

[profile.dev]
# Speed up dev build on macOS.
split-debuginfo = "unpacked"

[profile.dev.package."*"]
# Optimize dependencies.
opt-level = 3
