[package]
name = "twodina"
description = "A 2d game engine on top of Bevy."
version = "0.2.3"
authors = ["Jonathan Tran <jonnytran@gmail.com>", "Daniel Taub <dmtaub@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "^1.0.36"
bevy = { version = "0.5.0", features=["vorbis"] }
bevy_tiled_prototype = "0.2.5"
parry2d = "^0.3.0"
ron = "0.6.4"
ruruby = { git = "https://github.com/jtran/ruruby", branch = "windows-slow-coroutines" }
serde = { version = "^1.0.123", features = ["derive"] }
toml = "0.5"

[patch.crates-io]
bevy_tiled_prototype = { git = "https://github.com/chipflask/bevy_tiled/", branch = "embedded_objects" }
#bevy_tiled_prototype = { path = "../bevy_tiled" }
# bevy = { git = "https://github.com/bevyengine/bevy/", branch = "main", features = ["vorbis"] }

[profile.dev]
# Speed up dev build on macOS.
split-debuginfo = "unpacked"

[profile.dev.package."*"]
# Optimize dependencies.
opt-level = 3
