[package]
name = "twodina"
description = "A 2d game engine on top of Bevy."
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
bevy = { version = "0.8.1", features = ["vorbis"] }
parry2d = "0.11.1"
ron = "0.8.0"
serde = { version = "1.0.147", features = ["derive"] }
toml = "0.5"

[profile.dev.package."*"]
# Optimize dependencies.
opt-level = 3
